# infilect-etl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: lookup.py  pjp.py  store.py  user.py
app/routers/: pjp.py  stores.py  users.py
app/schemas/: pjp_schema.py  store_schema.py  user_schema.py
app/services/: lookup_service.py  pjp_ingestor.py  store_ingestor.py  user_ingestor.py
